--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ glide = "4.16.0"
 loggingInterceptor = "4.12.0"
 runtimeLivedata = "1.7.5"
 playServicesLocation = "21.3.0"
+benchmarkMacro = "1.3.3"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityCompose" }
@@ -45,6 +46,7 @@ okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "loggingInterce
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+androidx-benchmark-macro = { group = "androidx.benchmark", name = "benchmark-macro", version.ref = "benchmarkMacro" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
